# gdl-source-code

./: .gitignore  .gitmodules  CMakeLists.txt  GDL.sln  GDL.vcxproj  GDL.vcxproj.filters  LICENSE  README.md
cocos2dx/base_nodes/: CCNode.h
cocos2dx/platform/win32/: CCStdC.h
gd.h/sprite_nodes/: TextArea.h
libraries/: BrownAlertDelegate.hpp
libraries/cocos2dx/sprite_nodes/: CCSprite.h
libraries/gd.h/achievement_nodes/: AchievementBar.h
libraries/gd.h/include/: gd.h
libraries/gd.h/layers_scenes_transitions_nodes/: DialogLayer.h
libraries/gd.h/sprite_nodes/: TextArea.h
libs/: BrownAlertDelegate.hpp
libs/cocos-headers/cocos2dx/sprite_nodes/: CCSprite.h
src/: BrownAlertDelegate.hpp  Hooks.cpp  Hooks.hpp  Menu.cpp  Menu.hpp  coloring.cpp  coloring.h  dllmain.cpp  hooks.cpp  hooks.hpp  includes.h  includes.hpp  menu.cpp  utils.cpp  utils.hpp
